# manifest

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  openapi.yaml
.github/workflows/: deploy.yml  preview.yml  snapshot.yml
design/: legion-server-architecture.md  prompting_ressearch.md  user-story-to-spec-prompt.md
manifest-app/: .gitignore  Cargo.toml  README.md  justfile
manifest-app/.claude/: settings.local.json
manifest-app/app/: Cargo.toml
manifest-app/app/src/: active_context.rs  context_file.rs  main.rs
manifest-app/feature_editor/: Cargo.toml
manifest-app/feature_editor/src/: editor.rs  editor_tab.rs  lib.rs  scrollbar.rs  text_input.rs
manifest-app/feature_panel/src/: lib.rs
manifest-app/manifest_client/src/: lib.rs
manifest-app/terminal/: Cargo.toml
manifest-app/terminal/src/: lib.rs  terminal_hyperlinks.rs
manifest-app/terminal/src/mappings/: colors.rs  keys.rs  mod.rs
manifest-app/terminal_view/: Cargo.toml
manifest-app/terminal_view/src/: lib.rs  terminal_element.rs  terminal_view.rs
manifest-core/: Cargo.toml
manifest-core/src/: lib.rs
manifest-core/src/db/migrations/: 002_add_instructions.sql  004_history_details.sql
manifest-gpui/: Cargo.toml
manifest-gpui/legion/: Cargo.toml
manifest-gpui/legion/src/: main.rs
manifest-gpui/legion_terminal/: Cargo.toml
manifest-gpui/legion_terminal/src/: bounds.rs  content.rs  event.rs  lib.rs  terminal.rs
manifest-gpui/legion_terminal/src/mappings/: keys.rs  mod.rs
manifest-gpui/legion_ui/: Cargo.toml
manifest-gpui/legion_ui/src/: actions.rs  app.rs  lib.rs  theme.rs  workspace.rs
manifest-gpui/legion_ui/src/components/: disclosure.rs  list_item.rs  mod.rs  resize_handle.rs
manifest-gpui/legion_ui/src/editor/: feature_editor.rs  markdown_renderer.rs  mod.rs
manifest-gpui/legion_ui/src/sidebar/: feature_tree.rs  mod.rs  project_picker.rs  sidebar.rs
manifest-gpui/legion_ui/src/terminal/: mod.rs  terminal_view.rs
manifest-gpui/legion_ui/tests/: app_spec.rs  markdown_renderer_spec.rs
manifest-tui/: Cargo.toml
manifest-tui/src/: app.rs  main.rs  spawn.rs  tmux.rs  ui.rs
scripts/: snapshot-db.sh
src/: lib.rs  main.rs
src/api/: middleware.rs  mod.rs
src/api/handlers/: mod.rs
src/db/: mod.rs  schema.rs
src/db/migrations/: 001_initial.sql
src/mcp/: client.rs  mod.rs  types.rs
src/models/: criterion.rs  feature.rs  history.rs  mod.rs  note.rs  project.rs  session.rs  task.rs
tests/: api_spec.rs  db_spec.rs  mcp_protocol_spec.rs
