[package]
name = "manifest-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Manifest: models and database operations"
license = "BUSL-1.1"

[dependencies]
# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
directories = "6"

[dev-dependencies]
tempfile = "3"
