[workspace]
resolver = "2"
members = ["legion", "legion_ui", "legion_terminal"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[workspace.dependencies]
# UI
gpui = "0.2"

# Terminal
alacritty_terminal = "0.24"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Sync primitives
parking_lot = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
