[package]
name = "terminal"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
gpui.workspace = true
alacritty_terminal.workspace = true
futures.workspace = true
smol.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
itertools.workspace = true
libc.workspace = true
