[package]
name = "legion"
version.workspace = true
edition.workspace = true

[[bin]]
name = "manifest-gpui"
path = "src/main.rs"

[dependencies]
legion_ui = { path = "../legion_ui" }
legion_terminal = { path = "../legion_terminal" }

gpui.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
