[package]
name = "legion_terminal"
version.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal.workspace = true
gpui.workspace = true
tokio.workspace = true
futures.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
